--- a/pokemondex/styles.css
+++ b/pokemondex/styles.css
@@ -7,7 +7,7 @@ body {
 }
 
 header {
-    background-color: #e40c0c;
+    background-color: #b109ef;
     color: white;
     text-align: center;
     padding: 15px;
