--- a/pokemondex/type.css
+++ b/pokemondex/type.css
@@ -1,7 +1,7 @@
 header {
     position: sticky;
     top: 0;
-    background-color: #e40c0c;
+    background-color: #b109ef;
     color: white;
     padding: 15px;
     text-align: center;
