--- a/Profile/index.css
+++ b/Profile/index.css
@@ -1,11 +1,11 @@
 body {
-    background-color: white;
+    background-color: #e3e3e3;
     font-family: 'Arial', sans-serif;
     text-align: center;
 }
 
 .container {
-    width: 300px;
+    width: 500px;
     margin: 50px auto;
     background-color: #e9a4f4;
     border-radius: 20px;
@@ -20,8 +20,8 @@ h1 {
 }
 
 img {
-    width: 100px;
-    height: 100px;
+    width: 250px;
+    height: 250px;
     border-radius: 50%;
     margin-bottom: 10px;
 }
