--- a/Profile/index.css
+++ b/Profile/index.css
@@ -1,5 +1,7 @@
 body {
-    background-color: #e3e3e3;
+    background-image: url('Space.jpg');
+    background-size: cover;
+    background-position: center;
     font-family: 'Arial', sans-serif;
     text-align: center;
 }
